# web_plotter

./: README.md
docs/: Web Plotter可视化工具使用指南(Windows).md  部署流程.md
web_plotter_backend/: CMakeLists.txt  package.xml
web_plotter_backend/scripts/: server.py
web_plotter_backend/scripts/templates/: index.html
