<?xml version="1.0"?>
<package format="2">
  <name>web_plotter_backend</name>
  <version>0.0.1</version>
  <description>The web_plotter_backend package for visualizing ROS topics via WebSocket</description>

  <maintainer email="student@todo.todo">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
</package>