<?xml version="1.0"?>
<package format="2">
  <name>web_plotter_backend</name>
  <version>1.0</version>
  <description>The web_plotter_backend package for visualizing ROS topics</description>

  <maintainer email="2874257768@qq.com">Aoalas</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
</package>
